unpackaged/main/default/objects/Allocation_Strategy__c/Allocation_Strategy__c.object-meta.xml
<CustomObject>
    <label>Allocation Strategy</label>
    <nameField>
        <displayFormat>AS-{00000000}</displayFormat>
        <label>Allocation Strategy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Strategies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>