unpackaged/main/default/objects/Allocation_Strategy__c/fields/Allocation__c.field-meta.xml
<CustomField>
    <fullName>Allocation__c</fullName>
    <label>Allocation</label>
    <referenceTo>Allocation__c</referenceTo>
    <relationshipLabel>Allocation Strategies</relationshipLabel>
    <relationshipName>Allocation_Strategies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>