unpackaged/main/default/objects/Allocation_Strategy__c/fields/Funding_Basis__c.field-meta.xml
<CustomField>
    <fullName>Funding_Basis__c</fullName>
    <description>Snapshot of Order__c.Funding_Basis__c taken when the Order Ticket completed (see Allocation_TriggerHandler.setAllocationStrategies). Dollar sleeves are fixed carve-outs; Percent sleeves describe the actively traded remainder and total 100% across the allocation. Blank on snapshots taken before this field existed.</description>
    <inlineHelpText>Dollar = fixed amount that does not float with account value. Percent = share of the remainder after fixed-dollar sleeves.</inlineHelpText>
    <label>Funding Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Dollar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>