unpackaged/main/default/objects/Allocation_Strategy__c/fields/Initial_Funding_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Initial_Funding_Percentage__c</fullName>
    <label>Initial Funding Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>