unpackaged/main/default/objects/Allocation_Strategy__c/fields/Principal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Principal_Amount__c</fullName>
    <label>Principal Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>