unpackaged/main/default/objects/Allocation_Strategy__c/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategy</label>
    <referenceTo>Strategy__c</referenceTo>
    <relationshipLabel>Allocation Strategies</relationshipLabel>
    <relationshipName>Allocation_Strategies</relationshipName>
    <type>Lookup</type>
</CustomField>