unpackaged/main/default/objects/Allocation_Strategy__c/fields/Total_Initial_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Initial_Funding_Amount__c</fullName>
    <label>Total Initial Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>